# sky-forge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
reports/: DEV_REPORT_Bilibili_Live.md  DEV_REPORT_Piano_Player.md  DEV_REPORT_Playback_Timing.md
sheets/: example.json
src/: main.py
src/live/: __init__.py  client.py  handler.py
src/player/: __init__.py  controller.py  keyboard.py  player.py  sheet.py
